# nse-navigators

./: .gitignore  README.md  accounts.py  accounts_client.py  app.py  database.py  import_scripts.py  import_shares.py  market.py  market_server.py  mcp_params.py  pyproject.toml  redis_data_import.py  requirements.txt  reset.py  scraper.py  templates.py  trade_execution.py  traders.py  trading_floor.py
agents/: researcher_agent.py
agents_data/: cathie.json  george.json  ray.json  warren.json
all_agents/: base_trade_agent.py  decision_agent.py  execution_agent.py  fundamental_agent.py  manager_agent.py  researcher_agent.py  technical_agent.py
data/: accounts.py  database.py  import_scripts.py  market.py  market_indicators.py  redis_data_import.py  schemas.py
market_tools/: advance_market.py  fundamental_tools.py  historical_data_fetcher.py  live_prices.py  market.py  market_context_updater.py  technical_tools.py
mcp_servers/: accounts_client.py  accounts_server.py  decision_server.py  execution_server.py  fundamental_server.py  market_server.py  mcp_params.py  mcp_servers_manager.py  memory_server.py  push_server.py  risk_server.py  technical_server.py
mcp_tools/: accounts_server.py  market_server.py
memory/: agent_memory.py  memory_tools.py
risk_management/: position_manager.py  risk_management_tools.py  stop_loss_manager.py  stop_loss_watcher.py  trade_execution.py
scheduler/: workflow_manager.py
src/: tracers.py
trade_agents/: accounts.py  models.py  orchestrator.py  performance_metrics.py  reset.py  session_manager.py  strategies.py  templates.py  tracers.py  traders.py  trading_orchestrator.py
utils/: dhan_client.py  index_data.yaml  json_response_extractor.py  nse_navigators_improvement_plan.md  playwright_mcp_server.js  project_details.md  redis_client.py  (+3 more)
